# GroceryStore

./: CMakeLists.txt  main.cpp
include/: category.h  database.h  menu.h  product.h  profitmargin.h  vat.h
source/: category.cpp  database.cpp  menu.cpp  product.cpp  profitmargin.cpp  vat.cpp
